Release 1.20.3-pre3 (snapshot)